<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="76dp"
        android:text="@string/txtTitulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtN1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:text="@string/btnVerifica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtN2" />

    <Button
        android:id="@+id/btnCalcula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnCalcula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifica" />

    <TextView
        android:id="@+id/resVerifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/resCalcula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resCalcula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcula" />

    <EditText
        android:id="@+id/txtN1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/txtN1"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txtN2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/txtN2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:hint="@string/txtN2"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnVerifica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtN1" />

</androidx.constraintlayout.widget.ConstraintLayout>